A CSS patch from Bruno Busco, fix a wrap issue in screenlet
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@680852 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1091,7 +1091,6 @@ float: right;
 font-size: 1em;
 font-weight: bold;
 padding: 0.1em 0.5em 0.2em 0.5em;
-white-space: nowrap;
 }
 
 .screenlet-title-bar ul h1,
